Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1988

In server intercept plugins, unmapped URLs in logs are empty

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • Logging, TS API
    • None

    Description

      When logging requests for a server intercept (e.g. the stats-over-http plugin), the CQUUC tag (unmapped canonical URL) shows a "-". This means there is no value for this URL. CQUC (the mapped URL) works though, but this is pretty inconsistent with expected behavior.

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: