proxy/logging/LogAccessHttp.cc
@@ -313,13 +313,19 @@ LogAccessHttp::marshal_client_req_url_canon(char *buf)
 int
 LogAccessHttp::marshal_client_req_unmapped_url_canon(char *buf)
 {
-
-  validate_unmapped_url();
-
-  int len = round_strlen(m_client_req_unmapped_url_canon_len + 1);      // +1 for eos
+  int len = INK_MIN_ALIGN;
 
   if (buf) {
-    marshal_mem(buf, m_client_req_unmapped_url_canon_str, m_client_req_unmapped_url_canon_len, len);
+    validate_unmapped_url();
+    if (0 == m_client_req_unmapped_url_canon_len) {
+      // If the unmapped URL isn't populated, we'll fall back to the original
+      // client URL. This helps for example server intercepts to continue to
+      // log the requests, even when there is no remap rule for it.
+      len = marshal_client_req_url_canon(buf);
+    } else {
+      len = round_strlen(m_client_req_unmapped_url_canon_len + 1);      // +1 for eos
+      marshal_mem(buf, m_client_req_unmapped_url_canon_str, m_client_req_unmapped_url_canon_len, len);
+    }
   }
   return len;
 }
@@ -330,15 +336,17 @@ LogAccessHttp::marshal_client_req_unmapped_url_canon(char *buf)
 int
 LogAccessHttp::marshal_client_req_unmapped_url_path(char *buf)
 {
-  int len;
+  int len = INK_MIN_ALIGN;
 
-  validate_unmapped_url();
-
-  validate_unmapped_url_path();
-
-  len = round_strlen(m_client_req_unmapped_url_path_len + 1);   // +1 for eos
   if (buf) {
-    marshal_mem(buf, m_client_req_unmapped_url_path_str, m_client_req_unmapped_url_path_len, len);
+    validate_unmapped_url();
+    validate_unmapped_url_path();
+    if (0 == m_client_req_unmapped_url_path_len) {
+      len = marshal_client_req_url_path(buf);
+    } else {
+      len = round_strlen(m_client_req_unmapped_url_path_len + 1);   // +1 for eos
+      marshal_mem(buf, m_client_req_unmapped_url_path_str, m_client_req_unmapped_url_path_len, len);
+    }
   }
   return len;
 }
@@ -349,12 +357,13 @@ LogAccessHttp::marshal_client_req_unmapped_url_path(char *buf)
 int
 LogAccessHttp::marshal_client_req_unmapped_url_host(char *buf)
 {
-  validate_unmapped_url();
-  validate_unmapped_url_path();
-
-  int len = round_strlen(m_client_req_unmapped_url_host_len + 1);      // +1 for eos
+  int len = INK_MIN_ALIGN;
 
   if (buf) {
+    validate_unmapped_url();
+    validate_unmapped_url_path();
+
+    len = round_strlen(m_client_req_unmapped_url_host_len + 1);      // +1 for eos
     marshal_mem(buf, m_client_req_unmapped_url_host_str, m_client_req_unmapped_url_host_len, len);
   }
   return len;
